vcl/source/gdi/sallayout.cxx
@@ -265,11 +265,6 @@ SalLayoutGlyphs SalLayout::GetGlyphs() const
     return SalLayoutGlyphs(); // invalid
 }
 
-bool SalLayout::IsMultiSalLayout() const
-{
-    return false;
-}
-
 DeviceCoordinate GenericSalLayout::FillDXArray( std::vector<DeviceCoordinate>* pCharWidths, const OUString& rStr ) const
 {
     if (pCharWidths)
@@ -1215,11 +1210,6 @@ SalLayoutGlyphs MultiSalLayout::GetGlyphs() const
     for( int n = 0; n < mnLevel; ++n )
         glyphs.AppendImpl(mpLayouts[n]->GlyphsImpl().clone());
     return glyphs;
-}
-
-bool MultiSalLayout::IsMultiSalLayout() const
-{
-    return true;
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
